# copilot-application

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  tasks.txt
backend/: go.mod
backend/application/: handlers.go
backend/config/: config.go
backend/database/: database.go  models.go
backend/go/: .dockerignore  Dockerfile  README.md  go.mod  go.sum  go.yml  main.go
backend/go/application/: application.go  application_test.go  handlers.go  utils.go
backend/go/config/: config.go
backend/go/database/: database.go  models.go
backend/go/logger/: logger.go
backend/go/perf/: README.md  docker-compose.go-only.yml  load_test.py
backend/llm_service/: .dockerignore  Dockerfile  README.md  pyproject.toml  python.yml
backend/llm_service/app/: main.py
backend/llm_service/app/api/: __init__.py  dependencies.py  router.py
backend/llm_service/app/api/endpoints/: __init__.py  chat.py  conversations.py  health.py
backend/llm_service/app/core/: __init__.py  config.py  database.py  events.py
backend/llm_service/app/middleware/: __init__.py  auth.py  cors.py
backend/llm_service/app/models/: __init__.py  conversation.py  message.py
backend/llm_service/app/prompts/: __init__.py  system_prompts.py
backend/llm_service/app/repositories/: __init__.py  base.py  conversation_repository.py  message_repository.py
backend/llm_service/app/schemas/: __init__.py  chat.py  conversation.py
backend/llm_service/app/services/: __init__.py  conversation_service.py  file_processing_service.py  file_service.py  mistral_service.py
backend/llm_service/app/utils/: __init__.py  error_handlers.py  logger.py
backend/llm_service/perf/: README.md  docker-compose.llm-only.yml  load_test.py  results.json
backend/python/: Dockerfile  Makefile  README.md  pyproject.toml  python.yml
backend/python/app/api/endpoints/: chat.py
backend/python/app/core/: config.py  events.py
backend/python/app/schemas/: chat.py
backend/python/app/utils/: logger.py
db/: db.yml  initdb.sql
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  frontend.yml  middleware.js  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.js  loading.js  page.js  page.module.css
frontend/app/auth/: page.js  page.module.css
frontend/app/components/auth/: AuthForm.jsx  LoginForm.jsx  Logo.jsx  SignupForm.jsx  WelcomeScreen.jsx  auth.module.css
frontend/app/components/copilot/: AnswerDisplay.jsx  AnswerDisplay.module.css  ConversationView.jsx  ConversationView.module.css  QuestionHistory.jsx  QuestionHistory.module.css  QuestionPanel.jsx  QuestionPanel.module.css  SessionList.jsx  SessionList.module.css  TopicButtons.jsx  TopicButtons.module.css  icons.jsx
frontend/app/components/ui/: BackgroundBlobs.jsx  BackgroundBlobs.module.css  LoadingScreen.jsx  LoadingScreen.module.css  avatar.jsx  avatar.module.css  badge.jsx  button.jsx  button.module.css  card.jsx  card.module.css  full-screen-loading.jsx  input.jsx  input.module.css  label.jsx  label.module.css  markdown.jsx  markdown.module.css  password-input.jsx  password-input.module.css  scroll-area.jsx  scroll-area.module.css  select.jsx  separator.jsx  textarea.jsx  textarea.module.css  toast.jsx  toast.module.css  toggle.jsx  toggle.module.css  (+1 more)
frontend/app/constants/: topics.js
frontend/app/context/: AuthContext.jsx  ThemeContext.jsx
frontend/app/utils/: apiHelpers.js  authApi.js  conversationApi.js  errorHelpers.js  fileValidation.js  messageHelpers.js  mockLLM.js  typingHelpers.js  validation.js
scripts/: README.md  test_api.py
